objects/vlocity_cmt__AssessmentQuestion__c.object
<CustomObject>
    <description>Represents a question answered on an Assessment. When defined for an assessment template, this represents the definition of a question requiring an answer.</description>
    <fields>
        <fullName>vlocity_cmt__AssessmentDateFormat__c</fullName>
        <formula>vlocity_cmt__AssessmentId__r.vlocity_cmt__DateFormat__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Date Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssessmentId__c</fullName>
        <label>Assessment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_cmt__Assessment__c.vlocity_cmt__IsTemplate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__Assessment__c</referenceTo>
        <relationshipLabel>Assessment Questions</relationshipLabel>
        <relationshipName>AssessmentQuestions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FreetextType__c</fullName>
        <label>Free-text Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Short Text</fullName>
                    <default>true</default>
                    <label>Short Text</label>
                </value>
                <value>
                    <fullName>Long Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsTemplateQuestion__c</fullName>
        <formula>vlocity_cmt__AssessmentId__r.vlocity_cmt__IsTemplate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Template Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentAssessmentId__c</fullName>
        <formula>vlocity_cmt__ParentQuestion__r.vlocity_cmt__AssessmentId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentAssessmentId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Question</label>
        <referenceTo>vlocity_cmt__AssessmentQuestion__c</referenceTo>
        <relationshipLabel>Assessment Questions</relationshipLabel>
        <relationshipName>Assessment_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuestionType__c</fullName>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Free-text</fullName>
                </value>
                <value>
                    <fullName>Instruction</fullName>
                </value>
                <value>
                    <fullName>Multi-select</fullName>
                </value>
                <value>
                    <fullName>Single Select</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Question Table Single Select</fullName>
                </value>
                <value>
                    <fullName>Question Table MultiSelect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Question__c</fullName>
        <label>Question</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Scorable__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether this Question in the Assessment will receive a score.</inlineHelpText>
        <label>Scorable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Score__c</fullName>
        <inlineHelpText>When completing an Assessment, stores the value resulting from the Answer to this specific Question.</inlineHelpText>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SelectType__c</fullName>
        <label>Select Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Radio Button</fullName>
                    <default>true</default>
                    <label>Radio Button</label>
                </value>
                <value>
                    <fullName>Dropdown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Weight__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Indicates whether a Question is weighted more (i.e. 1.5) or less (i.e. 0.75) when scoring the Assessment.</inlineHelpText>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Assessment Question</label>
    <nameField>
        <label>Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Questions</pluralLabel>
    <recordTypes>
        <fullName>vlocity_cmt__Checkbox</fullName>
        <active>true</active>
        <label>Checkbox</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Date</fullName>
        <active>true</active>
        <label>Date</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__FreeText</fullName>
        <active>true</active>
        <label>Free Text</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Instruction</fullName>
        <active>true</active>
        <label>Instruction</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MultiSelect</fullName>
        <active>true</active>
        <label>Multi Select</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Number</fullName>
        <active>true</active>
        <label>Number</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__QuestionTableMultiSelect</fullName>
        <active>true</active>
        <label>Question Table Multi Select</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__QuestionTableSingleSelect</fullName>
        <active>true</active>
        <label>Question Table Single Select</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__SingleSelect</fullName>
        <active>true</active>
        <label>Single Select</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>